@@ -8,19 +8,22 @@
 
   :components  ((:module "syntax-extensions"
                  :pathname "code/syntax-extensions"
-                 :components ((:file "extended-package-prefix"))))
+                 :components ((:file "extended-package-prefix")
+                              (:file "s-expression-comment"))))
 
   :in-order-to ((test-op (test-op "eclector.syntax-extensions/test"))))
 
 (defsystem "eclector.syntax-extensions/test"
   :depends-on  ("eclector.syntax-extensions"
+                "eclector-concrete-syntax-tree"
                 (:version "fiveam" "1.4"))
 
   :components  ((:module "syntax-extensions"
                  :pathname "test/syntax-extensions"
                  :serial t
                  :components ((:file "package")
-                              (:file "extended-package-prefix"))))
+                              (:file "extended-package-prefix")
+                              (:file "s-expression-comment"))))
 
   :perform     (test-op (operation component)
                  (uiop:symbol-call '#:eclector.syntax-extensions.test '#:run-tests)))
