@@ -46,6 +46,14 @@ Release 0.10 (not yet released)
 
   with this extension.
 
+* A new syntax extension which is implemented by the reader macro
+  ECLECTOR.SYNTAX-EXTENSIONS.S-EXPRESSION-COMMENT:S-EXPRESSION-COMMENT allows
+  commenting out s-expressions in a fashion similar to SRFI 62 for scheme. One
+  difference is that a numeric infix argument can be used to comment out a
+  number of s-expressions different from 1:
+
+    (frob r1 r2 :k3 4 #4; :k5 6 :k6 7)
+
 Release 0.9 (2023-03-19)
 
 * The deprecated function ECLECTOR.CONCRETE-SYNTAX-TREE:CST-READ has been
